crates/solidity/testing/snapshots/bindings_output/modifiers/diamond/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or Semicolon.
   ╭─[input.sol:2:18]
   │
 2 │     modifier foo virtual { _; }
   │                  ───────┬───────  
   │                         ╰───────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
   ╭─[input.sol:6:18]
   │
 6 │     modifier foo virtual override { _; }
   │                  ────────────┬───────────  
   │                              ╰───────────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
    ╭─[input.sol:10:18]
    │
 10 │     modifier foo virtual override { _; }
    │                  ────────────┬───────────  
    │                              ╰───────────── Error occurred here.
────╯
Missing definitions/references:: 
    ╭─[input.sol:1:1]
    │
  2 │     modifier foo virtual { _; }
    │              ─┬─  
    │               ╰─── missing definition/reference
    │ 
  6 │     modifier foo virtual override { _; }
    │              ─┬─  
    │               ╰─── missing definition/reference
    │ 
 10 │     modifier foo virtual override { _; }
    │              ─┬─  
    │               ╰─── missing definition/reference
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Base {
    │          ──┬─  
    │            ╰─── def: 1
    │ 
  5 │ contract A is Base {
    │          ┬    ──┬─  
    │          ╰────────── def: 2
    │                 │   
    │                 ╰─── ref: 1
    │ 
  9 │ contract B is Base {
    │          ┬    ──┬─  
    │          ╰────────── def: 3
    │                 │   
    │                 ╰─── ref: 1
    │ 
 13 │ contract Test is B, A {
    │          ──┬─    ┬  ┬  
    │            ╰─────────── def: 4
    │                  │  │  
    │                  ╰───── ref: 3
    │                     │  
    │                     ╰── ref: 2
 14 │     function test() public foo {}
    │              ──┬─          ─┬─  
    │                ╰──────────────── def: 5
    │                             │   
    │                             ╰─── unresolved
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │       ╭─▶ contract Base {
    ┆       ┆   
  3 │ │     ├─▶ }
    │ │     │       
    │ │     ╰─────── definiens: 1
  4 │ ╭───────▶ 
    ┆ ┆         
  7 │ ├─│ ────▶ }
    │ │ │           
    │ ╰───────────── definiens: 2
  8 │   ╭─────▶ 
    ┆   ┆       
 11 │   ├─│ ──▶ }
    │   │ │         
    │   ╰─────────── definiens: 3
 12 │     ╭───▶ 
    ┆     ┆     
 14 │     │         function test() public foo {}
    │     │     ─────────────────┬────────────────  
    │     │                      ╰────────────────── definiens: 5
 15 │     ├───▶ }
    │     │         
    │     ╰───────── definiens: 4
────╯
